# Fish-8

./: CMakeLists.txt  README.md
include/: Chip8.hpp  Debugger.hpp  FishCommon.hpp  Instruction.hpp  Interpreter.hpp  Log.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui-1.79/: CMakeLists.txt
lib/tinyfiledialog/: CMakeLists.txt  README.txt  tinyfiledialogs.c
roms/: sound.rom
roms/chip8-test-rom/: LICENSE
roms/cint8-test-rom/: README.txt
src/emulator/: CMakeLists.txt  Chip8.cpp  Debugger.cpp  Instruction.cpp  Interpreter.cpp  Log.cpp
src/frontend/: Application.cpp  Application.hpp  CMakeLists.txt  Gui.cpp  Gui.hpp  Settings.hpp  Window.cpp  Window.hpp  main.cpp
src/frontend/res/: Icon.hpp  Inconsolata.hpp
